src/css/style.scss
.hr {
  margin-bottom: 0;
}
a {
  color: #337ab7;
  text-decoration: none;
}

a:hover,
a:focus {
  color: #000000;
}

.brand {
  height: 40px;
}

// todo theme setting
.application-wrapper {
  display: grid;
  grid-template-columns: 100%;
  margin: 4px auto 0 auto;
  // background: $black-color;
  opacity: 0.9;
  .application-content {
    display: flex;
    .fixed-content {
      position: fixed;
      height: 100vh;
      // width: inherit;
      z-index: 1;
      width: 16.67%;
    }
    &.sideMenuLeft {
      flex-direction: row;
    }
    &.sideMenuRight {
      flex-direction: row-reverse;
    }
    &.topMenu {
      .fixed-content {
        height: auto;
        width: 100%;
      }
    }
    .wrapper {
      padding: 10px 0px;
      position: relative;
      overflow: hidden;
      display: block;
      // todo: for theme start
      background-color: $black-color;
      color: $grey-color;
      // background-color: $white-color;
      // color: $black-color;
      // todo: for theme end
      opacity: 0.8;
      &.topMenu {
        margin-top: 46px;
        @media (max-width: 768px) {
          margin-top: 0;
        }
      }
    }
  }
  @include view-mobile {
    .application-content {
      flex-direction: column !important;
      .fixed-content {
        width: 100%;
        height: auto;
      }
    }
  }
  @include view-desktop-large {
    &.default {
      grid-template-columns: 100%;
      .application-content {
        .fixed-content {
          width: 100%;
        }
      }
    }
    &.classic {
      grid-template-columns: auto 70% auto;
    }
    margin: 4px auto 0 auto;
  }
  @include view-desktop-x-large {
    &.default {
      grid-template-columns: 100%;
      .application-content {
        .fixed-content {
          width: 100%;
        }
      }
    }
    &.classic {
      grid-template-columns: auto 70% auto;
    }
    margin: 4px auto 0 auto;
  }

  // mobile
  @media (max-width: 768px) {
    margin-top: 50px;
  }
  //landscape
  @media (min-width: 992px) and (max-width: 1199px) {
    margin-top: 4px;
  }
  // portrait
  @media (min-width: 768px) and (max-width: 991px) {
    margin-top: 50px;
  }
  //print
  @media print {
    margin-top: 0;
  }
}

.vertical-header {
  padding-top: 46px;
  @include view-tablet-potrait {
    padding-top: 0;
  }
  &.topMenu {
    height: 50px;
  }
  .vertical-header-wrapper {
    z-index: 10;
    opacity: 0.8;
    // background: $black-color;
    &.sideMenu {
      height: 100%;
      background: transparent;
    }
    .nav-menu {
      display: flex;
      &.sideMenuLeft,
      &.sideMenuRight {
        flex-direction: column;
      }
      &.sideMenuRight {
        text-align: right;
        padding-right: 10px;
      }
      &.topMenu {
        flex-direction: row;
        align-items: center;
        background: $black-color;
        @include view-desktop-large {
          width: 70%;
        }
      }
      .nav-header {
        padding: 5px 0;
      }
      .header-menu {
        height: auto;
        overflow: auto;
        padding-left: 0;
        margin-top: 0;
        margin-bottom: 0px;
        display: flex;
        flex-grow: 1;
        justify-content: space-evenly;
        &.sideMenuLeft,
        &.sideMenuRight {
          flex-direction: column;
        }
        &.topMenu {
          flex-direction: row;
        }

        li {
          padding: 0.5rem 1rem;
          font-size: 12px;
          margin: 0 !important;
          text-transform: capitalize;
          white-space: nowrap;
          a {
            color: $grey-color;
            display: block;
            width: 100%;
            position: relative;
            text-decoration: none !important;
            white-space: pre-wrap;
            word-wrap: break-word;
            word-break: break-all;
            white-space: normal;
            &:hover {
              color: $fluorescent-color;
              font-weight: bold;
            }
          }
          .fa-angle-right {
            position: absolute;
            right: 0;
            font-size: 14px;
            top: 0px;
          }
          &:last-child {
            border-bottom: 0;
          }
        }
      }

      @include view-mobile {
        .header-menu {
          list-style: none;
          padding: 0;
          li {
            padding-left: 0 !important;
          }
        }
      }
    }
  }
}
.vertical-header li {
  list-style: none;
}

.nav,
.navbar,
.navbar-nav {
  margin-bottom: 0;
}

.navbar-default {
  border-radius: 0;
  border: 0;
  background-color: transparent;
}

.navbar-default .nav > li > a {
  display: block;
  font-size: 14px;
  padding: 15px 15px;
  position: relative;
  text-transform: capitalize;
  font-weight: 500;
  font-family: montserrat;
}

.navbar-nav > li > .dropdown-menu {
  margin-top: 15px;
}

.navbar-default .navbar-nav > li > a:hover,
.navbar-default .navbar-nav > li > a:focus,
.navbar-default .navbar-nav > .active > a,
.navbar-default .navbar-nav > .active > a:hover,
.navbar-default .navbar-nav > .active > a:focus {
  background-color: transparent;
}

/*********************
MOBILE MENU
*********************/

.navbar-inverse {
  background-color: #121212;
  border: 0;
  margin: 0;
  padding: 10px 0;
  border-radius: 0;
}

.navbar-collapse {
  box-shadow: none;
}

.navbar-inverse .navbar-nav > li > a {
  font-size: 13px;
  font-weight: 400;
  margin: 0;
  text-transform: capitalize;
  white-space: nowrap;
}

.navbar-inverse .nav > li > a {
  padding-left: 10px;
  padding-right: 10px;
}

.navbar-inverse .navbar-nav > li {
  padding-left: 10px;
}

/*********************
SECTIONS
*********************/

.video-section {
  position: relative;
  width: 100%;
  height: calc(100vh - 4px);
  overflow: hidden;
  @media only screen and (max-width: 767px) {
    margin: 0;
  }
  @media (min-width: 768px) and (max-width: 991px) {
    margin-top: -3px;
  }
  .banner-img {
    opacity: 0.8;
    object-fit: cover;
  }
}
/* ... */

